# llm-finetune

./: .gitignore  READEME.md  pyproject.toml
src/bert_classification/: test.py  train.ipynb
src/smolVlm/: run.ipynb
src/t5_seq_2_seq/: get_dataset.py  notes.md  train_yoda.ipynb  translate_with_yoda.py
