[tool.poetry]
name = "fine-tuning"
version = "0.1.0"
description = ""
authors = ["Stephen Chung <53108134+spchung@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
transformers = "^4.52.3"
datasets = "^3.6.0"
torch = "^2.7.0"
torchvision = "^0.22.0"
torchaudio = "^2.7.0"
accelerate = ">=0.26.0"
evaluate = "^0.4.3"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
